--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.15.0",
     "motion": "^12.8.0",
     "next": "15.3.1",
     "react": "^19.0.0",
